--- a/.gitignore
+++ b/.gitignore
@@ -159,6 +159,6 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
 
-# Ignorer Fish-refined_subset_value.csv dans data
-/data/Fish-refined_subset_value.csv
+# Ignorer le dossier data
+/data
 
