--- a/.pylintrc
+++ b/.pylintrc
@@ -11,9 +11,11 @@ disable=
     W0221, # arguments-differ
     R0901, # too-many-ancestors
     R0913, # too-many-arguments
+    W0104
 
 [TYPECHECK]
 
 # List of members which are set dynamically and missed by Pylint inference
 # system, and so shouldn't trigger E1101 when accessed.
 generated-members=numpy.*, torch.*, sklearn.*
+ignored-modules=sklearn
